Context path arrangements

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,9 @@
 <div id="app">
     <p>{{ message }}</p>
 
-    <button id="btn_mycustom" type="button" onclick="alert('Hello world!')">Click Me!</button>
+    <button id="btn_mycustom"  onclick="alert('Hello dunya!')">Click Me!</button>
+    <button id="btn_vueexample"  v-on:click="showAlert">Vue Click</button>
+    <p>deneme Coordinates : x={{ x }}, y={{ y }}</p>
 </div>
 
 
